<project xmlns="http://maven.apache.org/POM/4.0.0"

         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"

         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0

http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>


    <groupId>org.example</groupId>

    <artifactId>Lr4-8</artifactId>

    <version>1.0-SNAPSHOT</version>

    <packaging>jar</packaging>


    <properties>

        <java.version>24</java.version>

        <maven.compiler.source>${java.version}</maven.compiler.source>

        <maven.compiler.target>${java.version}</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    </properties>


    <dependencies>

        <dependency>

            <groupId>org.mockito</groupId>

            <artifactId>mockito-core</artifactId>

            <version>5.14.2</version>

            <scope>test</scope>

        </dependency>


        <dependency>

            <groupId>org.mockito</groupId>

            <artifactId>mockito-junit-jupiter</artifactId>

            <version>5.14.2</version>

            <scope>test</scope>

        </dependency>


        <dependency>

            <groupId>org.junit.jupiter</groupId>

            <artifactId>junit-jupiter-api</artifactId>

            <version>5.10.2</version>

            <scope>test</scope>

        </dependency>

        <dependency>

            <groupId>org.junit.jupiter</groupId>

            <artifactId>junit-jupiter-engine</artifactId>

            <version>5.10.2</version>

            <scope>test</scope>

        </dependency>


        <dependency>

            <groupId>org.projectlombok</groupId>

            <artifactId>lombok</artifactId>

            <version>1.18.42</version>

            <scope>provided</scope>

        </dependency>


        <dependency>

            <groupId>io.github.cdimascio</groupId>

            <artifactId>dotenv-java</artifactId>

            <version>3.0.0</version>

        </dependency>


        <dependency>

            <groupId>com.sun.mail</groupId>

            <artifactId>jakarta.mail</artifactId>

            <version>2.0.1</version>

        </dependency>


        <dependency>

            <groupId>org.jacoco</groupId>

            <artifactId>org.jacoco.agent</artifactId>

            <version>0.8.12</version>

            <scope>test</scope>

        </dependency>

    </dependencies>


    <build>

        <plugins>

            <plugin>

                <groupId>org.apache.maven.plugins</groupId>

                <artifactId>maven-compiler-plugin</artifactId>

                <version>3.11.0</version>

                <configuration>

                    <release>${java.version}</release>

                </configuration>

            </plugin>


            <plugin>

                <groupId>org.codehaus.mojo</groupId>

                <artifactId>exec-maven-plugin</artifactId>

                <version>3.1.0</version>

                <configuration>

                    <mainClass>org.example.Main</mainClass>

                </configuration>

            </plugin>


            <plugin>

                <groupId>org.apache.maven.plugins</groupId>

                <artifactId>maven-surefire-plugin</artifactId>

                <version>3.2.5</version>

                <configuration>

                    <useModulePath>false</useModulePath>

                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>

                </configuration>

            </plugin>


            <plugin>

                <groupId>org.jacoco</groupId>

                <artifactId>jacoco-maven-plugin</artifactId>

                <version>0.8.12</version>

                <executions>

                    <execution>

                        <goals>

                            <goal>prepare-agent</goal>

                        </goals>

                    </execution>

                    <execution>

                        <id>report</id>

                        <phase>test</phase>

                        <goals>

                            <goal>report</goal>

                        </goals>

                    </execution>

                </executions>

            </plugin>

        </plugins>

    </build>

</project>